src/test/06-Errors/error-return-not-all-2.txt
error-return-not-all-2.ck:3:5: error: not all control paths in 'fun float foo( int v )' return a value
[3] fun float foo( int v )
        ^
